@@ -7,8 +7,8 @@
 						requires : [ 'CMDBuild.view.management.classes.map.proxy.Cards' ],
 						itemId : "configureRows",
 						layout : "anchor",
-						bodyCls: 'cmdb-blue-panel',
-						border: false,
+						bodyCls : 'cmdb-blue-panel',
+						border : false,
 
 						defaults : {
 							anchor : "100%"
@@ -46,6 +46,7 @@
 						chargeStore : function(cardsStore, cardsArray, callback, callbackScope) {
 							var layoutConfiguration = this.getLayoutConfiguration();
 							var functionConfiguration = this.getFunctionConfiguration();
+							var thematismConfiguration = this.getThematismConfiguration();
 							var thematicDocument = this.interactionDocument.getThematicDocument();
 							var attributeName = this.parentWindow.getCurrentAttribute();
 							var currentStrategy = this.parentWindow.getCurrentStrategy();
@@ -62,12 +63,16 @@
 									.getCurrentSourceType(), cardsArray, attributeName);
 							var index = 0;
 							for ( var key in groups) {
+								var color = "ffffff";
+								if (CMDBuild.gis.constants.layers.GRADUATE_ANALYSIS !== thematismConfiguration.analysis) {
+									color = thematicDocument.getColor(key, layoutConfiguration.colorsTable, analysis.type,
+											index++);
+								}
 								cardsStore.add({
 									value : key,
 									cardinality : groups[key].count,
 									cards : groups[key].cards,
-									color : thematicDocument.getColor(key, layoutConfiguration.colorsTable,
-											analysis.type, index++)
+									color : color
 								});
 							}
 							callback.apply(callbackScope, []);
@@ -156,6 +161,9 @@
 						getFunctionConfiguration : function() {
 							return this.parentWindow.getFunctionConfiguration();
 						},
+						getThematismConfiguration : function() {
+							return this.parentWindow.getThematismConfiguration();
+						},
 						init : function() {
 							var layoutConfiguration = this.getLayoutConfiguration();
 							this.parentWindow.initForm(this, layoutConfiguration);
@@ -242,7 +250,7 @@
 								});
 							}
 						},
-						refreshGridColors : function () {
+						refreshGridColors : function() {
 							this.refreshResults(this.grid, function() {
 							}, this);
 						}
